Fixed spacing between footer and sizing of local news card

--- a/localized/src/index.css
+++ b/localized/src/index.css
@@ -209,6 +209,7 @@ span{
 
 .footer{
   position: fixed;
+  top: 97%;
   left: 0;
   bottom: 0;
   background-color: #0078D4;
@@ -237,13 +238,15 @@ span{
   margin-right: 62%;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 .column {
   float: left;
   width: 50%;
+}
+
+.LocalNewsCard img{
+  height: 60%; 
+}
+
+.LocalNewsDeck{
+  margin-bottom: 3%;
 }
